# glusterfs

./: Makefile.am  configure.ac  glusterfs.spec.in
extras/: Makefile.am
glusterfsd/src/: glusterfsd.c
heal/src/: Makefile.am  glfs-heal.c
libglusterfs/src/: inode.c  libglusterfs.sym
libglusterfs/src/glusterfs/: common-utils.h  glusterfs.h
rpc/rpc-lib/src/: rpcsvc.c
tests/: volume.rc
xlators/: Makefile.am
xlators/cluster/dht/src/: Makefile.am  dht-common.c  dht-common.h
xlators/debug/: Makefile.am
xlators/features/: Makefile.am
xlators/features/simple-quota/src/: Makefile.am  simple-quota.c  simple-quota.h
xlators/mgmt/glusterd/src/: glusterd-volgen.c  glusterd-volume-set.c
xlators/mount/fuse/src/: fuse-bridge.c  fuse-bridge.h  fuse-helpers.c
xlators/protocol/server/src/: server-rpc-fops_v2.c
xlators/storage/posix/src/: posix-entry-ops.c
